Repository pattern Unit of work pattern Client service

--- a/ShoppingListBE/ShoppingListBE/ShoppingListBE.csproj
+++ b/ShoppingListBE/ShoppingListBE/ShoppingListBE.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShoppingListBE.BusinessLogic\ShoppingListBE.BusinessLogic.csproj" />
     <ProjectReference Include="..\ShoppingListBE.DataAccess\ShoppingListBE.DataAccess.csproj" />
   </ItemGroup>
 
